Increase z-index to avoid scrollbars being too high

--- a/app/assets/stylesheets/research/overlay.scss
+++ b/app/assets/stylesheets/research/overlay.scss
@@ -5,7 +5,7 @@ body.namespace-research {
         width: 100%;
         top: 0;
         background-color: rgba(0,0,0,0.7);
-        z-index: 4;
+        z-index: 7;
 
         display: flex;
         align-items: center;
